Cambios y creacion nueva

--- a/portafolio/proyectos.html
+++ b/portafolio/proyectos.html
@@ -21,6 +21,43 @@
 
     </header>
     
+    <main id= "proyectoMain">
+        <h1>Mis proyectos</h1>
+        <p>Estos son los proyectos que he ido realizando durante mi formación. En otros, como podeis comprobar, son iniciativas que he tenido por mi cuenta en mis ratos libres, donde he dejado fluir mi imaginacion y mi creatividad.</p>
+        <div id="proyecto1">
+            <img src="capturaProyectoCodenoch.png" alt="Proyecto Codenotch" width="400px">
+            <div id="textoProyecto1">
+                <h2>Duplicado página Codenotch</h2>
+                <p>
+                    Descripción: Este es un proyecto que nos mandaron en la escuela. Recrear su pagina web en unos escasos pasos.
+                    Tecnologías utilizadas: html, css, git.
+                    Enlace al proyecto: <a href="https://github.com/CarlotaBergel/Maquetacion/tree/main/proyectoCodenoch"></a>
+                </p>
+            </div>
+        </div>
+        <div id="proyecto2">
+            <img src="capturaProyectoGaleria.png" alt="Proyecto Galeria" width="400 px">
+            <div id="textoProyecto2">
+                <h2>Galería</h2>
+                <p>
+                    Descripción: Este es un ejercicio en el que teníamos que recrear una galeria de fotos, con su blog y su página de inicio
+                    Tecnologías utilizadas: html, css, git.
+                    Enlaces: <a href="https://github.com/CarlotaBergel/Maquetacion/tree/main/maquetacion_basica/blog"></a>
+                </p>
+            </div>
+        </div>
+        <div id="proyecto3">
+            <img src="" alt="Proyecto Agencia de Viajes">
+            <div id="textoProyecto3">
+                <h2>Agencia de viajes</h2>                
+                <p>
+                    Descripción: Este es un proyecto en el que creamos una agencia de viajes, y empezamos a meter funciones de JavaScript para los fltrados o para el formulario. 
+                    Tecnologías utilizadas: html, css, git, JavaScript.
+                    Enlaces: <a href="https://github.com/CarlotaBergel/Maquetacion/tree/main/agenciaDeViajes"></a>
+                </p>
+            </div>
+        </div>
+    </main>
 
     <footer>
         <h3 id="nombreFooter">Carlota Bergel Pozo</h3>
