--- a/portafolio/proyectos.html
+++ b/portafolio/proyectos.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div id="proyecto3">
-            <img src="" alt="Proyecto Agencia de Viajes">
+            <img src="capturaProyectoAgencia.png" alt="Proyecto Agencia de Viajes" width="400 px">
             <div id="textoProyecto3">
                 <h2>Agencia de viajes</h2>                
                 <p>
