cambios y nuevas paginas

--- a/portafolio/proyectos.html
+++ b/portafolio/proyectos.html
@@ -22,8 +22,8 @@
     </header>
     
     <main id= "proyectoMain">
-        <h1>Mis proyectos</h1>
-        <p>Estos son los proyectos que he ido realizando durante mi formación. En otros, como podeis comprobar, son iniciativas que he tenido por mi cuenta en mis ratos libres, donde he dejado fluir mi imaginacion y mi creatividad.</p>
+        <h1 id="h1Proyectos">Mis proyectos</h1>
+        <p id="parrafoProyectos">Estos son los proyectos que he ido realizando durante mi formación. En otros, como podeis comprobar, son iniciativas que he tenido por mi cuenta en mis ratos libres, donde he dejado fluir mi imaginacion y mi creatividad.</p>
         <div id="proyecto1">
             <img src="capturaProyectoCodenoch.png" alt="Proyecto Codenotch" width="400px">
             <div id="textoProyecto1">
@@ -36,7 +36,6 @@
             </div>
         </div>
         <div id="proyecto2">
-            <img src="capturaProyectoGaleria.png" alt="Proyecto Galeria" width="400 px">
             <div id="textoProyecto2">
                 <h2>Galería</h2>
                 <p>
@@ -45,6 +44,7 @@
                     Enlaces: <a href="https://github.com/CarlotaBergel/Maquetacion/tree/main/maquetacion_basica/blog"></a>
                 </p>
             </div>
+            <img src="capturaProyectoGaleria.png" alt="Proyecto Galeria" width="400 px">
         </div>
         <div id="proyecto3">
             <img src="capturaProyectoAgencia.png" alt="Proyecto Agencia de Viajes" width="400 px">
