--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="paginaPrincipal.html"> <b> Inicio </b> </a></li>
+                <li><a href="index.html"> <b> Inicio </b> </a></li>
                 <li><a href="proyectos.html"> <b>Proyectos </b> </a></li>
                 <li><a href="tecnologias.html"> <b>Tecnologías</b></a></li>
                 <li><a href="formulario.html"> <b>Contacto </b> </a></li>
